--- a/cs61a/lab00/lab00.html
+++ b/cs61a/lab00/lab00.html
@@ -13,7 +13,7 @@
       href="../../interpreter/deps/codemirror/lib/codemirror.css" />
 <link rel="stylesheet" type="text/css" href="../../interpreter/coding.css" />
 
-    <title>CS 61A Spring 2014: Lab 0 | CS 61A</title>
+    <title>CS 61A Summer 2014: Lab 0 | CS 61A</title>
 
   </head>
   <body style="font-family: Georgia,serif;">
