Fixed lab00 spring->summer

--- a/cs61a/lab00/lab00.html
+++ b/cs61a/lab00/lab00.html
@@ -17,7 +17,7 @@
 
   </head>
   <body style="font-family: Georgia,serif;">
-    <h1 id="title-main">CS 61A Spring 2014: Lab 0</h1>
+    <h1 id="title-main">CS 61A Summer 2014: Lab 0</h1>
 
     
 
