Added link to midterm study guide

--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -45,6 +45,7 @@
 <h2>Resources</h2>
 <!-- <h3><a href="./newcoder.html">New Coder's Guide to CS61A</a></h3> -->
 <h3><a href="./videos.html">My Youtube playlist for CS61A</a></h3>
+<h3><a href="http://www-inst.eecs.berkeley.edu/~cs61a/fa13/exams/61a-fa13-midterm1-study-guide.pdf">Fall 2013 Midterm 1 Study Guide</a></h3>
 
 <h3>Some useful links:</h3>
 <p>
