Added new sections to CS61A page, changed announcements

--- a/cs61a/philosophy.html
+++ b/cs61a/philosophy.html
@@ -35,38 +35,14 @@
 		<p><span id="tagline">Dickson Tsai </span><span id="divider"> | </span><span class="middle"> <a href="http://cs61a.org">CS61A Summer 2014</a> TA</span><span id="divider"> | </span><span id="jobline">Section 104 5-6:30 PM {M, W} 271 Soda, {T, R} 3105 Etcheverry</span></p>
 <div id="navbar-container">
   <ul id="navbar">
-      <li><a href="#officehoursinfo" class="navbar-link">Office Hours</a></li>
-      <li><a href="#resources" class="navbar-link">Resources</a></li>
+      <li><a href="index.html" class="navbar-link">CS61A Section 104 Main Page</a></li>
       <li><a href="philosophy.html" class="navbar-link">Philosophy</a></li>
       <li><a href="practiceproblems.html" class="navbar-link">Practice Problems</a></li>
       <li><a href="extraforexperience.html" class="navbar-link">Extra for Experience</a></li>
   </ul>
 </div>
-<h2 id="deadlines">Section Announcements</h2>
-<ul>
-    <li> For all deadlines, please consult <a href="http://cs61a.org">the course page</a>. There's a calendar at the bottom whose weekly view at the top gives a nice view of all the assignments that are due.</li>
-  <li> At any time, and hopefully multiple times, you should fill out the <a href="https://docs.google.com/a/berkeley.edu/forms/d/1o1K0b9uOZmxtQ_Xz5xQwdq8PGgsaq5nN4HN-tCeCzWY/viewform">TA feedback form</a> to tell Andrew and Rohin how I'm doing (I will not know your name so it's ok).</li>
-</ul>
-<div>
-	<h2 id="officehoursinfo">Office Hours: <span class="office-hours">Tuesdays, Thursdays 8-9 PM 411 Soda</span></h2>
-<iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zM33U288UNU8.kzHCwhaAjDmE" width="640" height="480"></iframe>
-<h2 id="resources">Resources</h2>
-<!-- <h3><a href="./newcoder.html">New Coder's Guide to CS61A</a></h3> -->
-<h3><a href="./videos.html">My Youtube playlist for CS61A</a></h3>
-<h3><a href="http://www-inst.eecs.berkeley.edu/~cs61a/fa13/exams/61a-fa13-midterm1-study-guide.pdf">Fall 2013 Midterm 1 Study Guide</a></h3>
 
-<h3>Some useful links:</h3>
-<p>
-<ul>
-<li><a href="http://docs.python.org/3/">Python v3.4.1 documentation</a></li>
-<li>The <a href="http://www.pythontutor.com/visualize.html">Online Python Tutor</a> draws environment diagrams for you. Make sure to execute the code using Python 3+ for this class. It may also be helpful to show environment parent pointers until you are familiar with how name lookup works. </li>
-<li>For those of you using GitHub as your version control: I highly recommend watching <a href="http://www.youtube.com/watch?v=ZDR433b0HJY">this video</a> by Scott Chacon. He gives a very intuitive lecture about how git works.</li>
-</ul>
-
-
-</p>
-</div>
-
+This page is under construction.
 
 	</div>
 </body>
