Added text editor code from discussion

--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -45,7 +45,7 @@
 <h2 id="deadlines">Section Announcements</h2>
 <ul>
     <li> For all deadlines, please consult <a href="http://cs61a.org">the course page</a>. There's a calendar at the bottom whose weekly view at the top gives a nice view of all the assignments that are due.</li>
-    <li> I will be giving cookies to students that can complete handwritten environment diagrams of any 20 problems from previous labs/discussions/hw by Tuesday 7/8. They must be correct but you can always check using Pythontutor. You should also consult the videos in my playlist (and keep in mind the notes from the annotations).</li> 
+    <li> I have unofficial office hours Wednesdays from 4-5pm at Soda 273 (right next to the CS61A lab).</li>
 </ul>
 <div>
 	<h2 id="officehoursinfo">Office Hours: <span class="office-hours">Tuesdays, Thursdays 8-9 PM 411 Soda, Wed 4-5 PM 273 Soda</span></h2>
@@ -54,6 +54,7 @@
 <!-- <h3><a href="./newcoder.html">New Coder's Guide to CS61A</a></h3> -->
 <h3><a href="./videos.html">My Youtube playlist for CS61A</a></h3>
 <h3><a href="http://www-inst.eecs.berkeley.edu/~cs61a/fa13/exams/61a-fa13-midterm1-study-guide.pdf">Fall 2013 Midterm 1 Study Guide</a></h3>
+<h3><a href="./discussion_code">Code from discussion</a></h3>
 
 <h3>Some useful links:</h3>
 <p>
