Added nonlocal worksheet

--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -46,7 +46,7 @@
 <ul>
     <li> For all deadlines, please consult <a href="http://cs61a.org">the course page</a>. There's a calendar at the bottom whose weekly view at the top gives a nice view of all the assignments that are due.</li>
     <li> I have unofficial office hours Wednesdays from 4-5pm at Soda 273 (right next to the CS61A lab).</li>
-    <li> Discussion warmups are now posted under Resources:"<a href="./discussion_code">Code from discussion</a>". Practice problems to come by Saturday night 11:59 PM.</li>
+    <li> Discussion warmups are now posted under Resources:"<a href="./discussion_code">Code from discussion</a>". Some <a href="practiceproblems.html">practice problems</a> for Midterm 2 are up. More to come. Solutions will be posted by Tuesday night.</li>
 </ul>
 <div>
 	<h2 id="officehoursinfo">Office Hours: <span class="office-hours">Tuesdays, Thursdays 8-9 PM 411 Soda, Wed 4-5 PM 273 Soda</span></h2>
