--- a/cs61a/practiceproblems.html
+++ b/cs61a/practiceproblems.html
@@ -41,8 +41,16 @@
       <li><a href="extraforexperience.html" class="navbar-link">Extra for Experience</a></li>
   </ul>
 </div>
-
-This page is under construction.
+<h2 class="resources">Midterm 2</h2>
+<ul>
+    <li>Nonlocal
+      <div class="warmup-container">
+        <ul class="warmups">
+            <li><a href="midterm2/nonlocal.html">Problems</a></li>
+        </ul>
+      </div>
+    </li>
+</ul>
 
 	</div>
 </body>
