--- a/cs61a/practiceproblems.html
+++ b/cs61a/practiceproblems.html
@@ -41,6 +41,7 @@
       <li><a href="extraforexperience.html" class="navbar-link">Extra for Experience</a></li>
   </ul>
 </div>
+<p>Don't forget that other TAs have magnificent resources as well: e.g. <a href="http://albertwu.org/cs61a/review/">Albert's website</a>, <a href="http://markmiyashita.com/cs61a/">Mark's website</a>, <a href="http://youripark.github.io/practice.html">Youri's website</a>, and various other worksheets posted to Piazza.</p>
 <h2 class="resources">Midterm 2</h2>
 <ul>
     <li>Nonlocal
