--- a/cs61a/practiceproblems.html
+++ b/cs61a/practiceproblems.html
@@ -48,6 +48,7 @@
       <div class="warmup-container">
         <ul class="warmups">
             <li><a href="midterm2/nonlocal.html">Problems</a></li>
+            <li><a href="midterm2/nonlocal_sol.html">Solutions</a></li>
         </ul>
       </div>
     </li>
