Added Disc 11 notes

--- a/cs61a/discussion_code/index.html
+++ b/cs61a/discussion_code/index.html
@@ -63,6 +63,10 @@
     </li>
 </ul>
 
+<h2 id="resources">Discussion Notes</h2>
+<ul>
+    <li><a href="disc11.pdf">Discussion 11 7/29 - Scheme and Functional Programming</a></li>
+</ul>
 
 <h2 id="resources">My Code</h2>
 <ul>
