Updated for Fall 2014

--- a/cs61a/discussion/index.html
+++ b/cs61a/discussion/index.html
@@ -4,27 +4,23 @@
 	<meta charset="utf-8" />
     <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href=/css/cs61a.css />
-	<title>CS61A Section 104 Discussion Code | Dickson Tsai</title>
+	<title>CS61A Discussion Code | Dickson Tsai</title>
 	<head profile="http://www.w3.org/2005/10/profile">
 	<link rel="icon" 
       type="image/png" 
       href="/assets/favicon.png">
     <script src="/js/jquery-1.9.1.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="/js/cs_script.js"></script>
 
 </head>
 <body>
 	<div id="sidebar">
 		<a href="/"><img id="profile" src="/assets/me.png" /></a>
 		<ul>
-		<li class="sidebar-list" id="home"><a class="sidebar-link" href="/">Home</a></li>
-		<li class="sidebar-list" id="about"><a class="sidebar-link" href="/about">About Me</a></li>
-		<li class="sidebar-list" id="projects"><a class="sidebar-link" href="/projects">Projects</a></li>
-		<li class="sidebar-list" id="resume"><a class="sidebar-link" href="/assets/resume.pdf">Resume</a></li>
-		<li class="sidebar-list" id="blog"><a class="sidebar-link" href="/blog">Blog</a></li>
-		<li class="sidebar-list" id="email"><a class="sidebar-link" href="mailto:dickson.tsai@gmail.com">Email</a></li>
+    <li>Welcome to my section <br>website! - Dickson</li>
+		<li class="sidebar-list" id="about"><a class="sidebar-link" href="mailto:dickson.tsai@berkeley.edu">Email</a></li>
 		</ul>
-		<div id="email-tag">dickson [dot] tsai [at] gmail</div>
+		<div id="email-tag">dickson [dot] tsai [at] berkeley</div>
 	</div>
 	<div id="content">
 		<header>
@@ -32,15 +28,31 @@
 			<span id="titleline">CS61A</span>
 		</div>
 		</header>
-		<p><span id="tagline">Dickson Tsai </span><span id="divider"> | </span><span class="middle"> <a href="http://cs61a.org">CS61A Summer 2014</a> TA</span><span id="divider"> | </span><span id="jobline">Section 104 5-6:30 PM {M, W} 271 Soda, {T, R} 3105 Etcheverry</span></p>
+		<p><span id="tagline">Dickson Tsai </span><span id="divider"> | </span><span class="middle"> <a href="http://inst.eecs.berkeley.edu/~cs61a/fa14/">CS61A Fall 2014</a> TA</span><span id="divider"> | </span><span id="jobline">sections = [(47, {T, R}, 11-12:30 PM, {330 Soda, 234 Dwinelle}), (29, {T, R} 6:30-8 PM, {271 Soda, 4 Evans})</span></p>
 <div id="navbar-container">
   <ul id="navbar">
-    <li><a href="../index.html" class="navbar-link">CS61A Section 104 Main Page</a></li>
+    <li><a href="../index.html" class="navbar-link">CS61A Main Page</a></li>
     <li><a href="../philosophy.html" class="navbar-link">Philosophy</a></li>
-    <li><a href="../practiceproblems.html" class="navbar-link">Practice Problems</a></li>
-    <li><a href="../extraforexperience.html" class="navbar-link">Extra for Experience</a></li>
+    <li><a href="./index.html" class="navbar-link">Discussion Resources</a></li>
+    <!--<li><a href="../practiceproblems.html" class="navbar-link">Practice Problems</a></li>
+    <li><a href="../extraforexperience.html" class="navbar-link">Extra for Experience</a></li>-->
   </ul>
 </div>
+<h1>Discussion Resources</h1>
+<h2 id="resources">Discussion Slides</h2>
+<ul>
+  <li>Discussion 0 - Working Effectively in CS
+    <div class="warmup-container">
+      <ul class="warmups">
+        <li><a href="disc0.pptx">Powerpoint (pptx)</a></li>
+        <li><a href="disc0.ppt">Powerpoint (ppt)</a></li>
+        <li><a href="disc0.pdf">PDF</a></li>
+      </ul>
+    </div>
+  </li>
+</ul>
+
+<!-- 
 <h2 id="resources">Discussion Warmups</h2>
 <ul>
     <li>Discussion 9 7/22 - OOP Basics
@@ -82,6 +94,7 @@
 <ul>
     <li><a href="https://github.com/antiboredom/videogrep">Videogrep</a> - a cool program that finds dialogue in video that matches a given search pattern and compiles all the supercuts from it.</li>
 </ul>
+-->
 
 	</div>
 </body>
