--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -4,27 +4,23 @@
 	<meta charset="utf-8" />
     <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href=/css/cs61a.css />
-	<title>CS61A Section 104 Page | Dickson Tsai</title>
+	<title>CS61A Section 47/29 Page | Dickson Tsai</title>
 	<head profile="http://www.w3.org/2005/10/profile">
 	<link rel="icon" 
       type="image/png" 
       href="/assets/favicon.png">
     <script src="/js/jquery-1.9.1.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="/js/cs_script.js"></script>
 
 </head>
 <body>
 	<div id="sidebar">
 		<a href="/"><img id="profile" src="/assets/me.png" /></a>
 		<ul>
-		<li class="sidebar-list" id="home"><a class="sidebar-link" href="/">Home</a></li>
-		<li class="sidebar-list" id="about"><a class="sidebar-link" href="/about">About Me</a></li>
-		<li class="sidebar-list" id="projects"><a class="sidebar-link" href="/projects">Projects</a></li>
-		<li class="sidebar-list" id="resume"><a class="sidebar-link" href="/assets/resume.pdf">Resume</a></li>
-		<li class="sidebar-list" id="blog"><a class="sidebar-link" href="/blog">Blog</a></li>
-		<li class="sidebar-list" id="email"><a class="sidebar-link" href="mailto:dickson.tsai@gmail.com">Email</a></li>
+    <li>Welcome to my section <br>website! - Dickson</li>
+		<li class="sidebar-list" id="about"><a class="sidebar-link" href="mailto:dickson.tsai@berkeley.edu">Email</a></li>
 		</ul>
-		<div id="email-tag">dickson [dot] tsai [at] gmail</div>
+		<div id="email-tag">dickson [dot] tsai [at] berkeley</div>
 	</div>
 	<div id="content">
 		<header>
@@ -32,36 +28,34 @@
 			<span id="titleline">CS61A</span>
 		</div>
 		</header>
-		<p><span id="tagline">Dickson Tsai </span><span id="divider"> | </span><span class="middle"> <a href="http://cs61a.org">CS61A Summer 2014</a> TA</span><span id="divider"> | </span><span id="jobline">Section 104 5-6:30 PM {M, W} 271 Soda, {T, R} 3105 Etcheverry</span></p>
+		<p><span id="tagline">Dickson Tsai </span><span id="divider"> | </span><span class="middle"> <a href="http://inst.eecs.berkeley.edu/~cs61a/fa14/">CS61A Fall 2014</a> TA</span><span id="divider"> | </span><span id="jobline">sections = [(47, {T, R}, 11-12:30 PM, {330 Soda, 234 Dwinelle}), (29, {T, R} 6:30-8 PM, {271 Soda, 4 Evans})</span></p>
 <div id="navbar-container">
   <ul id="navbar">
-      <li><a href="#officehoursinfo" class="navbar-link">Office Hours</a></li>
-      <li><a href="#resources" class="navbar-link">Resources</a></li>
-      <li><a href="philosophy.html" class="navbar-link">Philosophy</a></li>
-      <li><a href="practiceproblems.html" class="navbar-link">Practice Problems</a></li>
-      <li><a href="extraforexperience.html" class="navbar-link">Extra for Experience</a></li>
+    <li><a href="#officehoursinfo" class="navbar-link">Office Hours</a></li>
+    <li><a href="#useful" class="navbar-link">Useful Links</a></li>
+    <li><a href="philosophy.html" class="navbar-link">Philosophy</a></li>
+    <!--<li><a href="practiceproblems.html" class="navbar-link">Practice Problems</a></li>-->
+    <li><a href="./discussion" class="navbar-link">Discussion Resources</a></li>
   </ul>
 </div>
 <h2 id="deadlines">Section Announcements</h2>
 <ul>
-    <li> For all deadlines, please consult <a href="http://cs61a.org">the course page</a>. There's a calendar at the bottom whose weekly view at the top gives a nice view of all the assignments that are due.</li>
-    <li> I have unofficial office hours Wednesdays from 4-5pm at Soda 273 (right next to the CS61A lab).</li>
-    <li> Discussion warmups are now posted under Resources:"<a href="./discussion_code">Code from discussion</a>". Some <a href="practiceproblems.html">practice problems</a> for Midterm 2 are up. More to come. Solutions will be posted by Tuesday night.</li>
+  <li> Discussion warmups/slides are now posted under Resources: "<a href="./discussion">Materials from discussion</a>".</li>
 </ul>
 <div>
-	<h2 id="officehoursinfo">Office Hours: <span class="office-hours">Tuesdays, Thursdays 8-9 PM 411 Soda, Wed 4-5 PM 273 Soda</span></h2>
+	<h2 id="officehoursinfo">Office Hours: <span class="office-hours">Tuesdays, Thursdays 4-5 PM 411 Soda</span></h2>
 <iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zM33U288UNU8.kzHCwhaAjDmE" width="640" height="480"></iframe>
-<h2 id="resources">Resources</h2>
+<h2 id="useful">Useful Links</h2>
 <!-- <h3><a href="./newcoder.html">New Coder's Guide to CS61A</a></h3> -->
 <h3><a href="./videos.html">My Youtube playlist for CS61A</a></h3>
-<h3><a href="http://www-inst.eecs.berkeley.edu/~cs61a/fa13/exams/61a-fa13-midterm1-study-guide.pdf">Fall 2013 Midterm 1 Study Guide</a></h3>
-<h3><a href="./discussion_code">Code from discussion</a></h3>
+<!-- <h3><a href="http://www-inst.eecs.berkeley.edu/~cs61a/fa13/exams/61a-fa13-midterm1-study-guide.pdf">Fall 2013 Midterm 1 Study Guide</a></h3> -->
 
-<h3>Some useful links:</h3>
+<h3>Other useful links:</h3>
 <p>
 <ul>
 <li><a href="http://docs.python.org/3/">Python v3.4.1 documentation</a></li>
-<li>The <a href="http://www.pythontutor.com/visualize.html">Online Python Tutor</a> draws environment diagrams for you. Make sure to execute the code using Python 3+ for this class. It may also be helpful to show environment parent pointers until you are familiar with how name lookup works. </li>
+<li>The <a href="http://www.pythontutor.com/visualize.html">Online Python Tutor</a> draws environment diagrams for you. Make sure to execute the code using Python 3+ for this class. It may also be helpful to show environment parent pointers until you are familiar with how name lookup works.</li>
+<li><a href="http://ipython.org/notebook.html">The IPython Notebook </a> &mdash; An amazing way to take Python notes. You'll probably need to know more about <a href="http://daringfireball.net/projects/markdown/">Markdown</a>.</li>
 <li><a href="http://eloquentjavascript.net/2nd_edition/preview/05_higher_order.html">Eloquent Javascript Chapter 5: Higher-Order Functions</a>. This is an optional read, since our programming language for this class is Python, not Javascript. However, the author Marijn Haverbeke writes very eloquently on the concepts, and the code should be easy enough to follow.</li>
 <li>For those of you using GitHub as your version control: I highly recommend watching <a href="http://www.youtube.com/watch?v=ZDR433b0HJY">this video</a> by Scott Chacon. He gives a very intuitive lecture about how git works.</li>
 </ul>
