Added lab 1 resources

--- a/cs61a/discussion/index.html
+++ b/cs61a/discussion/index.html
@@ -52,6 +52,19 @@
   </li>
 </ul>
 
+<h1>Lab Resources</h1>
+<h2 id="resources">Lab Slides</h2>
+<ul>
+  <li>Lab 1 - Your Own Machine
+    <div class="warmup-container">
+      <ul class="warmups">
+        <li><a href="lab1.pptx">Powerpoint (pptx)</a></li>
+        <li><a href="lab1.ppt">Powerpoint (ppt)</a></li>
+        <li><a href="lab1.pdf">PDF</a></li>
+      </ul>
+    </div>
+  </li>
+</ul>
 <!-- 
 <h2 id="resources">Discussion Warmups</h2>
 <ul>
