Added discussion 1 slides

--- a/cs61a/discussion/index.html
+++ b/cs61a/discussion/index.html
@@ -41,12 +41,21 @@
 <h1>Discussion Resources</h1>
 <h2 id="resources">Discussion Slides</h2>
 <ul>
-  <li>Discussion 0 - Working Effectively in CS
+  <li>Discussion 0 8/28 - Working Effectively in CS
     <div class="warmup-container">
       <ul class="warmups">
         <li><a href="disc0.pptx">Powerpoint (pptx)</a></li>
         <li><a href="disc0.ppt">Powerpoint (ppt)</a></li>
         <li><a href="disc0.pdf">PDF</a></li>
+      </ul>
+    </div>
+  </li>
+  <li>Discussion 1 9/4 - Statements, Expressions, and Functions
+    <div class="warmup-container">
+      <ul class="warmups">
+        <li><a href="disc1.pptx">Powerpoint (pptx)</a></li>
+        <li><a href="disc1.ppt">Powerpoint (ppt)</a></li>
+        <li><a href="disc1.pdf">PDF</a></li>
       </ul>
     </div>
   </li>
