Refined discussion 1 slides

--- a/cs61a/discussion/index.html
+++ b/cs61a/discussion/index.html
@@ -19,8 +19,10 @@
 		<ul>
     <li>Welcome to my section <br>website! - Dickson</li>
 		<li class="sidebar-list" id="about"><a class="sidebar-link" href="mailto:dickson.tsai@berkeley.edu">Email</a></li>
+		<li class="sidebar-list" id="projects"><a class="sidebar-link" href="mailto:dickson.tsai+cs61ahw@berkeley.edu">Section HW Email</a></li>
 		</ul>
 		<div id="email-tag">dickson [dot] tsai [at] berkeley</div>
+		<div id="email-submit-tag">dickson [dot] tsai+cs61ahw [at] berkeley</div>
 	</div>
 	<div id="content">
 		<header>
@@ -38,6 +40,7 @@
     <li><a href="../extraforexperience.html" class="navbar-link">Extra for Experience</a></li>-->
   </ul>
 </div>
+<p><b>Important note: </b>Section homework 1 is in the Lab 1 Slides. All subsequent section homeworks will be in the discussion slides. They are due in the discussion after, e.g. Section homework 2 can be found in discussion 1 slides and is due in discussion 2.</p>
 <h1>Discussion Resources</h1>
 <h2 id="resources">Discussion Slides</h2>
 <ul>
