--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -19,8 +19,10 @@
 		<ul>
     <li>Welcome to my section <br>website! - Dickson</li>
 		<li class="sidebar-list" id="about"><a class="sidebar-link" href="mailto:dickson.tsai@berkeley.edu">Email</a></li>
+		<li class="sidebar-list" id="projects"><a class="sidebar-link" href="mailto:dickson.tsai+cs61ahw@berkeley.edu">Section HW Email</a></li>
 		</ul>
 		<div id="email-tag">dickson [dot] tsai [at] berkeley</div>
+		<div id="email-submit-tag">dickson [dot] tsai+cs61ahw [at] berkeley</div>
 	</div>
 	<div id="content">
 		<header>
