Canceled section homework

--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -18,11 +18,11 @@
 		<a href="/"><img id="profile" src="/assets/me.png" /></a>
 		<ul>
     <li>Welcome to my section <br>website! - Dickson</li>
-		<li class="sidebar-list" id="about"><a class="sidebar-link" href="mailto:dickson.tsai@berkeley.edu">Email</a></li>
-		<li class="sidebar-list" id="projects"><a class="sidebar-link" href="mailto:dickson.tsai+cs61ahw@berkeley.edu">Section HW Email</a></li>
+		<li class="sidebar-list" id="about"><a class="sidebar-link" href="mailto:dickson.tsai+cs61a@berkeley.edu">Email</a></li>
+    <!-- <li class="sidebar-list" id="projects"><a class="sidebar-link" href="mailto:dickson.tsai+cs61ahw@berkeley.edu">Section HW Email</a></li> -->
 		</ul>
-		<div id="email-tag">dickson [dot] tsai [at] berkeley</div>
-		<div id="email-submit-tag">dickson [dot] tsai+cs61ahw [at] berkeley</div>
+		<div id="email-tag">dickson [dot] tsai+cs61a [at] berkeley</div>
+    <!-- <div id="email-submit-tag">dickson [dot] tsai+cs61ahw [at] berkeley</div> -->
 	</div>
 	<div id="content">
 		<header>
@@ -42,6 +42,7 @@
 </div>
 <h2 id="deadlines">Section Announcements</h2>
 <ul>
+  <li> Optional homeworks are <b style="color:red">canceled</b>. There will be an in-section quiz graded on effort. For those who already submitted Section Homework 1, you will get a free absence from discussion.</li>
   <li> Discussion warmups/slides are now posted under Resources: "<a href="./discussion">Materials from discussion</a>".</li>
 </ul>
 <div>
