--- a/cs61a/discussion/index.html
+++ b/cs61a/discussion/index.html
@@ -18,11 +18,11 @@
 		<a href="/"><img id="profile" src="/assets/me.png" /></a>
 		<ul>
     <li>Welcome to my section <br>website! - Dickson</li>
-		<li class="sidebar-list" id="about"><a class="sidebar-link" href="mailto:dickson.tsai@berkeley.edu">Email</a></li>
-		<li class="sidebar-list" id="projects"><a class="sidebar-link" href="mailto:dickson.tsai+cs61ahw@berkeley.edu">Section HW Email</a></li>
+		<li class="sidebar-list" id="about"><a class="sidebar-link" href="mailto:dickson.tsai+cs61a@berkeley.edu">Email</a></li>
+    <!-- <li class="sidebar-list" id="projects"><a class="sidebar-link" href="mailto:dickson.tsai+cs61ahw@berkeley.edu">Section HW Email</a></li> -->
 		</ul>
-		<div id="email-tag">dickson [dot] tsai [at] berkeley</div>
-		<div id="email-submit-tag">dickson [dot] tsai+cs61ahw [at] berkeley</div>
+		<div id="email-tag">dickson [dot] tsai+cs61a [at] berkeley</div>
+    <!-- <div id="email-submit-tag">dickson [dot] tsai+cs61ahw [at] berkeley</div> -->
 	</div>
 	<div id="content">
 		<header>
@@ -40,7 +40,7 @@
     <li><a href="../extraforexperience.html" class="navbar-link">Extra for Experience</a></li>-->
   </ul>
 </div>
-<p><b>Important note: </b>Section homework 1 is in the Lab 1 Slides. All subsequent section homeworks will be in the discussion slides. They are due in the discussion after, e.g. Section homework 2 can be found in discussion 1 slides and is due in discussion 2.</p>
+<p><b>Important note: </b>Section homeworks are <b style="color:red">canceled</b> due to low turning-in rate (and also due to programming quiz 1). For those who already turned in section homework, you will have a free absence in discussion for midterm recovery purposes. There will still be extra problems, but purely, purely optional.</p>
 <h1>Discussion Resources</h1>
 <h2 id="resources">Discussion Slides</h2>
 <ul>
