Added lab2 materials

--- a/cs61a/discussion/index.html
+++ b/cs61a/discussion/index.html
@@ -76,6 +76,14 @@
       </ul>
     </div>
   </li>
+  <li>Lab 2 - Control Flow and Higher Order Functions
+    <div class="warmup-container">
+      <ul class="warmups">
+        <li><a href="lab2.pptx">Powerpoint (pptx)</a></li>
+        <li><a href="lab2.pdf">PDF</a></li>
+      </ul>
+    </div>
+  </li>
 </ul>
 <!-- 
 <h2 id="resources">Discussion Warmups</h2>
