Added discussion 2 materials

--- a/cs61a/discussion/index.html
+++ b/cs61a/discussion/index.html
@@ -62,6 +62,14 @@
       </ul>
     </div>
   </li>
+  <li>Discussion 2 9/11 - Control and Higher Order Functions
+    <div class="warmup-container">
+      <ul class="warmups">
+        <li><a href="disc2.pptx">Powerpoint (pptx)</a></li>
+        <li><a href="disc2.pdf">PDF</a></li>
+      </ul>
+    </div>
+  </li>
 </ul>
 
 <h1>Lab Resources</h1>
