--- a/cs61a/discussion/index.html
+++ b/cs61a/discussion/index.html
@@ -41,6 +41,10 @@
   </ul>
 </div>
 <p><b>Important note: </b>Section homeworks are <b style="color:red">canceled</b> due to low turning-in rate (and also due to programming quiz 1). For those who already turned in section homework, you will have a free absence in discussion for midterm recovery purposes. There will still be extra problems, but purely, purely optional.</p>
+<p>I will update slides after each discussion to account for common student misconceptions and expansions of explanations that worked in discussion.
+This is complete when you see *UPDATED* next to the event that occurred.
+One can also find optional conceptual questions to go along with the lecture/reading in each slideshow.
+</p>
 <h1>Discussion Resources</h1>
 <h2 id="resources">Discussion Slides</h2>
 <ul>
@@ -62,7 +66,7 @@
       </ul>
     </div>
   </li>
-  <li>Discussion 2 9/11 - Control and Higher Order Functions
+  <li>Discussion 2 9/11 *UPDATED* - Control and Higher Order Functions
     <div class="warmup-container">
       <ul class="warmups">
         <li><a href="disc2.pptx">Powerpoint (pptx)</a></li>
@@ -75,7 +79,7 @@
 <h1>Lab Resources</h1>
 <h2 id="resources">Lab Slides</h2>
 <ul>
-  <li>Lab 1 - Your Own Machine
+  <li>Lab 1 9/2 - Your Own Machine
     <div class="warmup-container">
       <ul class="warmups">
         <li><a href="lab1.pptx">Powerpoint (pptx)</a></li>
@@ -84,7 +88,7 @@
       </ul>
     </div>
   </li>
-  <li>Lab 2 - Control Flow and Higher Order Functions
+  <li>Lab 2 9/9 - Control Flow and Higher Order Functions
     <div class="warmup-container">
       <ul class="warmups">
         <li><a href="lab2.pptx">Powerpoint (pptx)</a></li>
