Added lab03 material

--- a/cs61a/discussion/index.html
+++ b/cs61a/discussion/index.html
@@ -96,6 +96,14 @@ One can also find optional conceptual questions to go along with the lecture/rea
       </ul>
     </div>
   </li>
+  <li>Lab 3 9/16 - Lambdas and Recursion
+    <div class="warmup-container">
+      <ul class="warmups">
+        <li><a href="lab3.pptx">Powerpoint (pptx)</a></li>
+        <li><a href="lab3.pdf">PDF</a></li>
+      </ul>
+    </div>
+  </li>
 </ul>
 <!-- 
 <h2 id="resources">Discussion Warmups</h2>
