Added discussion 3 materials

--- a/cs61a/discussion/index.html
+++ b/cs61a/discussion/index.html
@@ -66,11 +66,19 @@ One can also find optional conceptual questions to go along with the lecture/rea
       </ul>
     </div>
   </li>
-  <li>Discussion 2 9/11 *UPDATED* - Control and Higher Order Functions
+  <li>Discussion 2 9/11 - Control and Higher Order Functions
     <div class="warmup-container">
       <ul class="warmups">
         <li><a href="disc2.pptx">Powerpoint (pptx)</a></li>
         <li><a href="disc2.pdf">PDF</a></li>
+      </ul>
+    </div>
+  </li>
+  <li>Discussion 3 9/18 - Recursion and Tree Recursion
+    <div class="warmup-container">
+      <ul class="warmups">
+        <li><a href="disc3.pptx">Powerpoint (pptx)</a></li>
+        <li><a href="disc3.pdf">PDF</a></li>
       </ul>
     </div>
   </li>
