Added MT1 rules sheet

--- a/cs61a/discussion/index.html
+++ b/cs61a/discussion/index.html
@@ -79,6 +79,7 @@ One can also find optional conceptual questions to go along with the lecture/rea
       <ul class="warmups">
         <li><a href="disc3.pptx">Powerpoint (pptx)</a></li>
         <li><a href="disc3.pdf">PDF</a></li>
+        <li><a href="mid1.txt">MT1 Rules handout</a></li>
       </ul>
     </div>
   </li>
