--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -42,6 +42,7 @@
 </div>
 <h2 id="deadlines">Section Announcements</h2>
 <ul>
+  <li> 9/18: The <a href="discussion/mid1.txt">rules handout</a> from discussion today is posted.
   <li> Optional homeworks are <b style="color:red">canceled</b>. There will be an in-section quiz graded on effort. For those who already submitted Section Homework 1, you will get a free absence from discussion.</li>
   <li> Discussion warmups/slides are now posted under Resources: "<a href="./discussion">Materials from discussion</a>".</li>
 </ul>
