Updated discussion 3 and 4

--- a/cs61a/discussion/index.html
+++ b/cs61a/discussion/index.html
@@ -83,6 +83,14 @@ One can also find optional conceptual questions to go along with the lecture/rea
       </ul>
     </div>
   </li>
+  <li>Discussion 4 9/25 *UPDATED* - Data Abstraction
+    <div class="warmup-container">
+      <ul class="warmups">
+        <li><a href="disc4.pptx">Powerpoint (pptx)</a></li>
+        <li><a href="disc4.pdf">PDF</a></li>
+      </ul>
+    </div>
+  </li>
 </ul>
 
 <h1>Lab Resources</h1>
