--- a/cs61a/discussion/index.html
+++ b/cs61a/discussion/index.html
@@ -121,6 +121,14 @@ One can also find optional conceptual questions to go along with the lecture/rea
       </ul>
     </div>
   </li>
+  <li>Lab 4 9/30 - Lists
+    <div class="warmup-container">
+      <ul class="warmups">
+        <li><a href="lab4.pptx">Powerpoint (pptx)</a></li>
+        <li><a href="lab4.pdf">PDF</a></li>
+      </ul>
+    </div>
+  </li>
 </ul>
 <!-- 
 <h2 id="resources">Discussion Warmups</h2>
