--- a/cs61a/discussion/index.html
+++ b/cs61a/discussion/index.html
@@ -30,7 +30,7 @@
 			<span id="titleline">CS61A</span>
 		</div>
 		</header>
-		<p><span id="tagline">Dickson Tsai </span><span id="divider"> | </span><span class="middle"> <a href="http://inst.eecs.berkeley.edu/~cs61a/fa14/">CS61A Fall 2014</a> TA</span><span id="divider"> | </span><span id="jobline">sections = [(47, {T, R}, 11-12:30 PM, {330 Soda, 234 Dwinelle}), (29, {T, R} 6:30-8 PM, {271 Soda, 4 Evans})</span></p>
+		<p><span id="tagline">Dickson Tsai </span><span id="divider"> | </span><span class="middle"> <a href="http://inst.eecs.berkeley.edu/~cs61a/fa14/">CS61A Fall 2014</a> TA</span><span id="divider"> | </span><span id="jobline">sections = [(47, {T, R}, 11-12:30 PM, {330 Soda, 70 Evans}), (29, {T, R} 6:30-8 PM, {271 Soda, 4 Evans})</span></p>
 <div id="navbar-container">
   <ul id="navbar">
     <li><a href="../index.html" class="navbar-link">CS61A Main Page</a></li>
@@ -83,11 +83,19 @@ One can also find optional conceptual questions to go along with the lecture/rea
       </ul>
     </div>
   </li>
-  <li>Discussion 4 9/25 *UPDATED* - Data Abstraction
+  <li>Discussion 4 9/25 - Data Abstraction
     <div class="warmup-container">
       <ul class="warmups">
         <li><a href="disc4.pptx">Powerpoint (pptx)</a></li>
         <li><a href="disc4.pdf">PDF</a></li>
+      </ul>
+    </div>
+  </li>
+  <li>Discussion 5 10/2 *NEW* - Lists and Trees
+    <div class="warmup-container">
+      <ul class="warmups">
+        <li><a href="disc5.pptx">Powerpoint (pptx)</a></li>
+        <li><a href="disc5.pdf">PDF</a></li>
       </ul>
     </div>
   </li>
