Added discussion 6 material

--- a/cs61a/discussion/index.html
+++ b/cs61a/discussion/index.html
@@ -99,6 +99,14 @@ One can also find optional conceptual questions to go along with the lecture/rea
       </ul>
     </div>
   </li>
+  <li>Discussion 6 10/9 *UPDATED* - Mutable Data
+    <div class="warmup-container">
+      <ul class="warmups">
+        <li><a href="disc6.pptx">Powerpoint (pptx)</a></li>
+        <li><a href="disc6.pdf">PDF</a></li>
+      </ul>
+    </div>
+  </li>
 </ul>
 
 <h1>Lab Resources</h1>
