--- a/cs61a/discussion/index.html
+++ b/cs61a/discussion/index.html
@@ -17,11 +17,12 @@
 	<div id="sidebar">
 		<a href="/"><img id="profile" src="/assets/me.png" /></a>
 		<ul>
-    <li>Welcome to my section <br>website! - Dickson</li>
-		<li class="sidebar-list" id="about"><a class="sidebar-link" href="mailto:dickson.tsai+cs61a@berkeley.edu">Email</a></li>
+      <li>Welcome to my section <br>website! - Dickson</a></li>
+    <li class="sidebar-list" id="about"><a class="sidebar-link" href="/meet">Appointments</a></li>
+		  <li class="sidebar-list" id="projects"><a class="sidebar-link" href="mailto:dickson.tsai+cs61a@berkeley.edu">Email</a></li>
     <!-- <li class="sidebar-list" id="projects"><a class="sidebar-link" href="mailto:dickson.tsai+cs61ahw@berkeley.edu">Section HW Email</a></li> -->
 		</ul>
-		<div id="email-tag">dickson [dot] tsai+cs61a [at] berkeley</div>
+		<div id="email-submit-tag">dickson [dot] tsai+cs61a [at] berkeley</div>
     <!-- <div id="email-submit-tag">dickson [dot] tsai+cs61ahw [at] berkeley</div> -->
 	</div>
 	<div id="content">
@@ -142,6 +143,15 @@ One can also find optional conceptual questions to go along with the lecture/rea
       <ul class="warmups">
         <li><a href="lab4.pptx">Powerpoint (pptx)</a></li>
         <li><a href="lab4.pdf">PDF</a></li>
+      </ul>
+    </div>
+  </li>
+  <li>Lab 6 10/14 - Object-oriented Programming (OOP)
+    <div class="warmup-container">
+      <ul class="warmups">
+        <li><a href="lab6.pptx">Powerpoint (pptx)</a></li>
+        <li><a href="lab6.pdf">PDF</a></li>
+        <li><a href="pdb_example.py">pdb_example.py</a> (Super basic OOP code to play with PDB)</li>
       </ul>
     </div>
   </li>
