--- a/cs61a/philosophy.html
+++ b/cs61a/philosophy.html
@@ -17,11 +17,12 @@
 	<div id="sidebar">
 		<a href="/"><img id="profile" src="/assets/me.png" /></a>
 		<ul>
-    <li>Welcome to my section <br>website! - Dickson</li>
-		<li class="sidebar-list" id="about"><a class="sidebar-link" href="mailto:dickson.tsai+cs61a@berkeley.edu">Email</a></li>
+      <li>Welcome to my section <br>website! - Dickson</a></li>
+    <li class="sidebar-list" id="about"><a class="sidebar-link" href="/meet">Appointments</a></li>
+		  <li class="sidebar-list" id="projects"><a class="sidebar-link" href="mailto:dickson.tsai+cs61a@berkeley.edu">Email</a></li>
     <!-- <li class="sidebar-list" id="projects"><a class="sidebar-link" href="mailto:dickson.tsai+cs61ahw@berkeley.edu">Section HW Email</a></li> -->
 		</ul>
-		<div id="email-tag">dickson [dot] tsai+cs61a [at] berkeley</div>
+		<div id="email-submit-tag">dickson [dot] tsai+cs61a [at] berkeley</div>
     <!-- <div id="email-submit-tag">dickson [dot] tsai+cs61ahw [at] berkeley</div> -->
 	</div>
 	<div id="content">
