Added disc7 slides

--- a/cs61a/discussion/index.html
+++ b/cs61a/discussion/index.html
@@ -108,6 +108,14 @@ One can also find optional conceptual questions to go along with the lecture/rea
       </ul>
     </div>
   </li>
+  <li>Discussion 7 10/16 - Inheritance and Interfaces
+    <div class="warmup-container">
+      <ul class="warmups">
+        <li><a href="disc7.pptx">Powerpoint (pptx)</a></li>
+        <li><a href="disc7.pdf">PDF</a></li>
+      </ul>
+    </div>
+  </li>
 </ul>
 
 <h1>Lab Resources</h1>
