--- a/cs61a/philosophy.html
+++ b/cs61a/philosophy.html
@@ -264,6 +264,18 @@ There are a few really cool observations about children one can make:
               			</ul>
 
               		<h3>Lab Resources</h3>
+              			<ul>
+              			
+              				<li><h5>1/27/15: Lab 2 - How Labs Will Be Run</h5>
+              					<div class="slides-container">
+	              					<ul class="slides">
+	              						<li><a href='/cs61a/discussion/lab2.pdf'>PDF</a></li>
+	              						<li><a href='/cs61a/discussion/lab2.pptx'>pptx</a></li>
+	              					</ul>
+              					</div>
+              				</li>
+              			
+              			</ul>
 
               	<hr>
               	<h2 id="sec5">Webpage Acknowledgements</h2>
