Fixed philosophy on labs

--- a/cs61a/discussion/index.html
+++ b/cs61a/discussion/index.html
@@ -144,18 +144,8 @@
     <li>Great chance to get to know people, especially those working on the same problem.</li>
     <li>Great chance to communicate!</li>
   </ul>
-  <li>Each pair will visit an "exhibit" for each problem, hosted by a lab assistant.</li>
-  <ul>
-    <li>Work at own pace.</li>
-    <li>Lab assistants can "check-off" each pair with follow-up questions.</li>
-    <li>Experienced students can start later on in the exhibit for more efficient use of time.</li>
-  </ul>
-  <li>Once complete with the exhibit, I hope to prepare additional interesting material, e.g. 
-  extra mini-project involving topic that day + extra libraries.</li>
-  <li>Nice, relaxed atmosphere</li>
-  <ul>
-    <li>There will be a break in the middle. I'll try to prepare jokes.</li>
-  </ul>
+  <li>The exhibit idea crashed and burned, so I will not repeat it next week. Sorry about that!</li>
+  <li>Please feel free to bring questions about anything to lab -- HW, Project, Lab, Lecture, Life. My lab assistants and I are willing to help you guys out!</li>
 </ol>
 
 <h3>How I'll run discussions</h3>
