Discussion 3 material posted

--- a/cs61a/discussion/index.html
+++ b/cs61a/discussion/index.html
@@ -97,7 +97,7 @@
       		<div class="col-md-9">
               	<h2 id="sec0">Section Announcements</h2>
                 <ul>
-                	<li>The midterm is coming in 3 weeks, so make friends soon!</li>
+                    <li>If you attended discussion Thursday 2/12, please fill out <a href="/attendance">this form</a>. 
               		<li>If you ever miss discussion, the slides are usually posted under "<a href="#sec4">Discussion Resources</a>"</li>
               	</ul>
             
