Update boardgames redirect to custom domain

--- a/boardgames.html
+++ b/boardgames.html
@@ -2,7 +2,7 @@
   <head>
     <meta
       http-equiv="refresh"
-      content="0; url=https://tranquil-beyond-59323.herokuapp.com"
+      content="0; url=http://boardgames.dicksontsai.com"
     />
   </head>
   <body></body>
